# enaqt-open-quantum-chains

./: .gitignore  PAPER_ENAQT_DRAFT.md  README.md  enaqt_2d_lattice.py  enaqt_2d_results.json  enaqt_disorder_results.json  enaqt_nsite_results.json  enaqt_optimal_results.json  enaqt_sb_analysis.py  enaqt_sb_results.json  enaqt_sigma_sweep.json  enaqt_sink_results.json  main.tex  pyproject.toml  references.bib
.github/workflows/: ci.yml
research/: ENAQT_Microtubule_Research_Report.md  enaqt_microtubule_cross_verification.md  enaqt_microtubule_dim01.md  enaqt_microtubule_dim02.md  enaqt_microtubule_dim03.md  enaqt_microtubule_dim04.md  enaqt_microtubule_dim05.md  enaqt_microtubule_dim06.md  enaqt_microtubule_dim07.md  enaqt_microtubule_dim08.md  enaqt_microtubule_dim09.md  enaqt_microtubule_dim10.md  enaqt_microtubule_dim11.md  enaqt_microtubule_dim12.md  enaqt_microtubule_insight.md
src/enaqt/: __init__.py  cli.py  core.py  disorder.py  nsite.py  spinboson.py
src/enaqt/original/: _plot_optimal_disorder.py  enaqt_disorder_ensemble.py  enaqt_nsite_chain.py  enaqt_optimal_disorder.py  enaqt_sb_sink.py
tests/: __init__.py  conftest.py  test_benchmarks.py  test_conservation.py  test_hamiltonians.py  test_liouvillian.py  test_qutip.py
