[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enaqt"
version = "1.0.0"
description = "Environment-Assisted Quantum Transport in open quantum chains"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "ENAQT Team" },
]
keywords = ["quantum", "transport", "open-quantum-systems", "lindblad", "photosynthesis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy >= 1.24.0",
    "scipy >= 1.10.0",
    "matplotlib >= 3.7.0",
    "joblib >= 1.3.0",
]

[project.optional-dependencies]
qutip = ["qutip >= 4.7.0"]
dev = [
    "pytest >= 7.4.0",
    "pytest-cov >= 4.1.0",
    "black >= 23.0.0",
    "flake8 >= 6.0.0",
    "mypy >= 1.5.0",
    "qutip >= 4.7.0",
]

[project.scripts]
enaqt = "enaqt.cli:main"

[project.urls]
Homepage = "https://github.com/enaqt/enaqt"

[tool.hatch.build.targets.wheel]
packages = ["src/enaqt"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/enaqt"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
